src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__edit_series_ui__edit_series_ui_tests__tests__snapshot_tests__edit_series_EditSeriesPrompt_SeriesDetails.snap
---
source: src/ui/sonarr_ui/library/edit_series_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Title: Test                                                                                                                                        │        
        │Overview: Blah blah blahIt was filmed in Madison, Wisconsin: a city the crew never really left.The first season took seven years to finish.        │        
        │Network: HBO       ╭─────────────────────────────────────────────  Edit - Test  ─────────────────────────────────────────────╮                     │        
        │Status: Continuing │                                             Blah blah blah                                              │                     │        
        │Genres: cool, famil│                                                                                                         │                     │        
        │Rating: 84%        │                 It was filmed in Madison, Wisconsin: a city the crew never really left.                 │                     │        
        │Year: 2022         │                                                                                                         │                     │        
        │Runtime: 63 minutes│                              The first season took seven years to finish.                               │                     │        
        │Path: /nfs/tv/Test │                                                                                                         │                     │        
        │Quality Profile: Bl│                                                  ╭───╮                                                  │                     │        
        │Language Profile: E│                                       Monitored: │ ✔ │                                                  │                     │        
        │Monitored: Yes     │                                                  ╰───╯                                                  │                     │        
        │Size on Disk: 59.51│                                                  ╭───╮                                                  │                     │        
        │                   │                                   Season Folder: │ ✔ │                                                  │                     │        
        │                   │                                                  ╰───╯                                                  │                     │        
        │                   │                                                  ╭─────────────────────────────────────────────────╮    │                     │        
        │╭  Series Details  │                                 Quality Profile: │Bluray-1080p                                   ▼ │    │────────────────────╮│        
        ││ Seasons │ History│                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││──────────────────│                                                  ╭─────────────────────────────────────────────────╮    │────────────────────││        
        ││   Monitored Seaso│                                Language Profile: │English                                        ▼ │    │                    ││        
        ││=> 🏷         Seaso│                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                     Series Type: │Standard                                       ▼ │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Path: │/nfs/tv                                          │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Tags: │alex                                             │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                    ││        
        ││                  ││                       Save                        ││                      Cancel                      ││                    ││        
        ││                  │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                    ││        
        ││                  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
